deployment-llm.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "app-draw2form"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-draw2form-llm
  namespace: app-draw2form
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deployment-draw2form-llm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deployment-draw2form-llm
    spec:
      containers:
        - image: ericaskari/draw2form-llm:latest
          name: draw2form-llm
          imagePullPolicy: Always
          resizePolicy:
            - resourceName: cpu
              restartPolicy: RestartContainer
            - resourceName: memory
              restartPolicy: RestartContainer
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
        - image: ericaskari/hss-proxy:latest
          name: draw2form-files-api
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: service-draw2form-llm
  namespace: app-draw2form
spec:
  ports:
    - name: llm-port
      port: 8001
      targetPort: 8001
      protocol: TCP
    - name: files-port
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: deployment-draw2form-llm
  sessionAffinity: None
  type: ClusterIP
