deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "app-draw2form"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-draw2form
  namespace: app-draw2form
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deployment-draw2form
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deployment-draw2form
    spec:
      containers:
        - image: ericaskari/draw2form-api:latest
          name: draw2form-api
          imagePullPolicy: Always
        - image: ericaskari/draw2form-llm-api:latest
          name: draw2form-llm-api
          imagePullPolicy: Always
          resizePolicy:
            - resourceName: cpu
              restartPolicy: RestartContainer
            - resourceName: memory
              restartPolicy: RestartContainer
          resources:
            requests:
              memory: "2Gi"
              cpu: "2000m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
        - image: ericaskari/draw2form-chatgpt-api:latest
          name: draw2form-chatgpt-api
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: service-draw2form
  namespace: app-draw2form
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
    - port: 8001
      protocol: TCP
      targetPort: 8001
    - port: 8002
      protocol: TCP
      targetPort: 8002
  selector:
    app.kubernetes.io/name: deployment-draw2form
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-draw2form
  namespace: app-draw2form
spec:
  tls:
    - hosts:
        - draw2form.ericaskari.com
      secretName: ericaskari-com-tls-secret
  rules:
    - host: draw2form.ericaskari.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-draw2form
                port:
                  number: 8000
          - path: /llm
            pathType: Prefix
            backend:
              service:
                name: service-draw2form
                port:
                  number: 8001
          - path: /chatgpt
            pathType: Prefix
            backend:
              service:
                name: service-draw2form
                port:
                  number: 8002
